<resources>
    <string name="app_name">Honkai Impact 3 Scanner</string>
    <string name="app_info" translatable="false">Powered By Hao_cen</string>
    <string name="app_ver" translatable="false">ver_placeholder</string>
    <string name="btn_login">Login</string>
    <string name="login_finished">Login Succeed</string>
    <string name="btn_scan">Scan Qr Code</string>
    <string name="btn_logout">Logout</string>
    <string name="list_main">Main</string>
    <string name="page_main">Scanner</string>
    <string name="list_settings">Settings</string>

    <string name="basic_header">Basic</string>
    <string name="settings_servers">Select Server</string>
    <string name="settings_fast_login">Automatic confirmation</string>
    <string name="settings_bh_ver">Honkai Impact Version</string>
    <string name="settings_update">Check Update</string>
    <string name="settings_pure_black_theme">Pure black dark theme</string>

    <string name="toolbar_icon_description">Icon PlaceHolder</string>
    <string name="nav_header_pid" translatable="false">Pixiv:89418903</string>
    <string name="request_permission_failed">Request permission FAILED</string>
    <string name="types_official">Official Server</string>
    <string name="types_prefix">"Selected : "</string>
    <string name="types_bilibili">BiliBili Server</string>
    <string name="types_huawei">Huawei Server</string>
    <string name="list_report">Bug Report</string>
    <string name="list_pay">Supporting author</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="feedback_holder">Thanks for your report</string>
    <string name="support_holder">Thanks for your donation</string>
    <string name="types_uc">UC Server</string>
    <string name="types_xiaomi">XiaoMi Server</string>
    <string name="boolean_true">ON</string>
    <string name="boolean_false">OFF</string>
    <string name="confirm_prefix">Auto Confirm:</string>
    <string name="channel_name">Proxy</string>
    <string name="channel_description">Magic for Inject SDK</string>
    <string name="error_scan">Wrong QR Code</string>
    <string name="error_oa_process">Waiting for OAServer URL</string>
    <string name="error_not_login">Not Login</string>
    <string name="has_login">Account Logged</string>
    <string name="error_wrong_server">Wrong Server</string>
    <string name="cache_delete">Cache Deleted</string>
    <string name="login_succeed">Login Succeed</string>
    <string name="logout">Account Logout</string>
    <string name="outdate_qr">QR Code OutDated</string>
    <string name="custom_username">Custom Display User Name</string>
    <string name="create_short_cut">Create Short Cut For Last Succeed</string>
    <string name="slot1">Slot 1</string>
    <string name="slot2">Slot 2</string>
    <string name="slot3">Slot 3</string>
    <string name="start_proxy">Start Proxy</string>
    <string name="use_token_true">Token Mode</string>
    <string name="types_vivo">Vivo Server</string>
    <string name="types_oppo">Oppo Server</string>
    <string name="report_github">Github</string>
    <string name="report_bili">BiliBili</string>
    <string name="report_qq">QQ Group</string>
    <string name="adv_header">Advanced</string>
    <string name="report_hand">Force submit Error data</string>
    <string name="types_flyme">Flyme Server</string>
    <string name="btn_register">Register</string>
    <string name="sponsors_list">Sponsors List</string>
    <string name="become_sp">Donate</string>
    <string name="user_rule">Agree User Rules</string>
    <string name="checkbox_wdj">WandouJia Account</string>
    <string name="reg_email">Email</string>
    <string name="reg_scanner_key">Sponsor Key</string>
    <string name="error_email">Wrong Email Address</string>
    <string name="error_key">Wrong Sponsor Key</string>
    <string name="error_ver_outdated">Scanner is OUTDATED</string>
    <string name="error_network">Network Error</string>
    <string name="reg_succ">Registered successfully</string>
    <string name="error_key_used">This Key is USED</string>
    <string name="sel_pc">PC</string>
    <string name="sel_android">Android</string>
    <string name="sel_ios">IOS</string>
    <string name="desc_click_login">Click to login.</string>
    <string name="dark_mode">Dark Mode Type</string>
    <string name="reg_new">Register</string>
    <string name="btn_get_key">Get Sponsor Key</string>
    <string name="btn_pic">Select from album</string>
    <string name="btn_tip">Custom Scanner Tips</string>
    <string name="btn_cancel">Cancel</string>
    <string name="login_cancel">Login Cancelled</string>
    <string name="btn_close_update">Close Update</string>
    <string name="bh_login_pref">Honkai Account:</string>
    <string name="sp_login_pref">Sponsor Account:</string>
    <string name="login_true">Logged</string>
    <string name="login_false">Not Login</string>
    <string name="update_check_off">Update Check Disable</string>
    <string name="sel_server">Select Server</string>
    <string name="auto_login_pref">Auto Login:</string>
    <string name="logged_and_restart">Account Logged\nPlease restart to apply change</string>
    <string name="login_process">Login…</string>
    <string name="btn_server">Server</string>
    <string name="btn_auto_login">Auto\nLogin</string>
    <string name="btn_auto_confirm">Auto\nConfirm</string>
    <string name="msg_getOa">Getting OA Server</string>
    <string name="use_socket">Receive socket requests</string>
    <string name="log_msg">Logger Message</string>
    <string name="log_level">Logger Level</string>
    <string name="list_log">Logs</string>
    <string name="feedback_way">Feed Back</string>
    <string name="logs">Logs</string>
    <string name="list_about">About</string>
    <string name="types_yyb">YYB Server(QQ only)</string>
    <string name="types_qihoo">360 Server</string>
    <string name="overwrite_bh_ver">Overwrite Honkai Version</string>
    <string name="overwrite_bh_ver_sum">Set version in the option below</string>
    <string name="keep_capture">Keep FabScanner</string>
    <string name="quit_on_success">Exit after successful scanning</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="capture_continue_before_result">None QRCode auto retry</string>
    <string name="fab_header">Fab Setting</string>
    <string name="fab_save_img">Save Screenshot</string>
    <string name="keep_capture_no_cooling_down">Keep Capture No Cooling Down</string>
    <string name="keep_capture_no_cooling_down_sum">As fast as you can</string>
    <string name="enable_adv_setting">Enable Advance Setting</string>
    <string name="no_server_tip">Disable Server Tips</string>
    <string name="no_server_tip_sum">below scanner username</string>
    <string name="beta_update">Allow Snapshot update</string>
    <string name="beta_update_sum">Cannot disable when already in BETA</string>
    <string name="use_token_sum">Hoyolab protocol Only for Official Channel</string>
    <string name="mi_adv_mode">XiaoMi Channel Test Mode</string>
    <string name="mi_adv_mode_sum">Allow Mi SDK access Service Module</string>
    <string name="icon_type">Select Extra Launcher Icon</string>
    <string name="enable_icon_pos">Enable Extra Launcher Icon</string>
    <string name="btn_hwacccenter">Huawei Account Center</string>
    <string name="hint_set_custom_remark">Custom Remark</string>

    <string name="disable_tips">The scanner is temporarily out of service for some reason.\n Please go to Bilibili\'s dynamic page or QQ group to check the specific reason.</string>

    <string name="tips_tips">Only used as an auxiliary prompt when scanning the QR code</string>
    <string name="crash_hint">Detected a recent crash happened.\nPlease bring a crash-report to get feedback from the developer in time!</string>
    <string name="crash_btn">Open CrashReport</string>
    <string name="crash_hint2">Press the back button / full screen return gesture \n to return to the home page\n\nDO NOT JUST POST SCREENSHOT FOR REPORT!\nDO NOT JUST POST SCREENSHOT FOR REPORT!\nDO NOT JUST POST SCREENSHOT FOR REPORT!\n\nFor more crash logs, please go to \n/Android/data/{packageName}/files/crash-report/</string>
    <string name="btn_get_sms">get verification code</string>
</resources>